--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Raleway', sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -64,21 +63,34 @@ body {
   background-color: var(--primary);
 }
 
+h1 {
+  font-size: 3rem;
+  font-weight: 900;
+  color: var(--text_color);
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: 600;
+  color: var(--text_color);
+}
+
+p {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: var(--text_color);
+}
+
 a {
-  color: inherit;
   text-decoration: none;
+  color: var(--text_color);
 }
 
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.glassContainer {
+  background: rgba( 255, 255, 255, 0.25 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 4px );
+  -webkit-backdrop-filter: blur( 4px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
