--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,41 +1,56 @@
 .glass-container {
-    background: rgba( 255, 255, 255, 0.25 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
-    border-radius: 0;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 
-    z-index: 100;
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 10vh;
+    z-index: 200;
 
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
   }
+
 
 .title {
     color: var(--primary);
-    font-size: 2rem;
+    font-size: 1.5rem;
+    font-weight: 900;
+    margin-left: 1vw;
+    margin-top: 1vh;
+}
+
+.navContainer {
+    display: flex;
+    justify-content: flex-end;
 }
 
 .nav {
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-pack: justify;
-	-ms-flex-pack: justify;
 	justify-content: space-between;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
 	align-items: center;
-	width: 100%;
+    width: 40%;
+
+    
+
+    text-decoration: none;
 }
 
-.a {
+.ul {
+    display: flex;
+    list-style: none;
+    margin-right: 1vw;
+}
+
+.li {
+    margin: 0 2vw;
+}
+
+.a, .p {
     color: var(--primary);
+    font-size: 1.2rem;
+    font-weight: 500;
 }
