--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,12 @@
 @tailwind utilities;
 
 @layer components {
-  
+  .navbar {
+    position: absolute;
+    inset: 0px auto auto 0px;
+    margin: 0px;
+    transform: translate3d(0px, 10.4px, 0px);
+  }
 }
 
 /*
