Added Home page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,17 @@
   }
 }
  /*
+
+--shiny-shamrock: #7FA689ff;
+--russian-green: #749A81ff;
+--wintergreen-dream: #6A8E7Aff;
+--wintergreen-dream-2: #5F8272ff;
+--hookers-green: #55766Aff;
+--feldgrau: #4A6962ff;
+--dark-slate-gray: #3F5D5Bff;
+--dark-slate-gray-2: #355153ff;
+--dark-slate-gray-3: #2A454Bff;
+
 :root {
   --primary: #331a3a;
   --secondary: #1e132e;
