--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,14 +6,15 @@ html {
     scroll-behavior: smooth;
 }
 
-@layer components {
-  .navbar {
-    position: absolute;
-    inset: 0px auto auto 0px;
-    margin: 0px;
-    transform: translate3d(0px, 10.4px, 0px);
-  }
+.navbarDropdown {
+  position: absolute;
+  inset: 0px auto auto 0px;
+  margin: 0px;
+  transform: translate3d(0px, 10.4px, 0px);
+  background-color: red;
 }
+
+
  /*
 
 --shiny-shamrock: #7FA689ff;
