--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,19 @@ html {
     scroll-behavior: smooth;
 }
 
+.tooltip1 {
+  position: absolute; 
+  inset: 0px auto auto 0px; 
+  margin: 0px; 
+  transform: translate3d(0px, 8px, 0px);
+}
+
+.tooltip2 {
+  position: absolute; 
+  left: 0px; 
+  transform: translate3d(0px, 0px, 0px);
+}
+
 @layer utilities {
     .text-gradient {
     background-clip: text;
