--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@ html {
 
 .home-bg {
   background-image: linear-gradient(to right bottom, #749a81, #547f77, #416367, #354851, #292f36, #252930, #212329, #1d1e23, #242830, #29323d, #2d3d4b, #2f4858);
+  clip-path: polygon(0 0, 100% 0, 100% 91%, 0% 100%);
 }
 
 .dropdown {
