--- a/styles/satoshi.css
+++ b/styles/satoshi.css
@@ -22,7 +22,6 @@
  *
 */
 
-
 /**
 * This is a variable font
 * You can controll variable axes as shown below:
@@ -35,16 +34,15 @@
 */
 
 @font-face {
-  font-family: 'Satoshi';
-  src: url('./fonts/Satoshi-Variable.woff2') format('woff2'),
-       url('./fonts/Satoshi-Variable.woff') format('woff'),
-       url('./fonts/Satoshi-Variable.ttf') format('truetype');
-       font-weight: 300 900;
-       font-display: swap;
-       font-style: normal;
+  font-family: "Satoshi";
+  src: url("./fonts/Satoshi-Variable.woff2") format("woff2"),
+    url("./fonts/Satoshi-Variable.woff") format("woff"),
+    url("./fonts/Satoshi-Variable.ttf") format("truetype");
+  font-weight: 300 900;
+  font-display: swap;
+  font-style: normal;
 }
 
-
 /**
 * This is a variable font
 * You can controll variable axes as shown below:
@@ -57,11 +55,11 @@
 */
 
 @font-face {
-  font-family: 'Satoshi-Italic';
-  src: url('./fonts/Satoshi-VariableItalic.woff2') format('woff2'),
-       url('./fonts/Satoshi-VariableItalic.woff') format('woff'),
-       url('./fonts/Satoshi-VariableItalic.ttf') format('truetype');
-       font-weight: 300 900;
-       font-display: swap;
-       font-style: italic;
+  font-family: "Satoshi-Italic";
+  src: url("./fonts/Satoshi-VariableItalic.woff2") format("woff2"),
+    url("./fonts/Satoshi-VariableItalic.woff") format("woff"),
+    url("./fonts/Satoshi-VariableItalic.ttf") format("truetype");
+  font-weight: 300 900;
+  font-display: swap;
+  font-style: italic;
 }
