--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,4 +54,13 @@ html {
       transparent 40%
     );
   }
+
+  .text {
+   overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-line-clamp: 4; /* number of lines to show */
+           line-clamp: 4; 
+   -webkit-box-orient: vertical;
+}
 }
