--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,17 @@
     background: #314C59;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
 @tailwind components;
 @tailwind utilities;
 
