--- a/app/globals.css
+++ b/app/globals.css
@@ -1,39 +1,86 @@
 @tailwind base;
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
-  
+
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #F1F1EA;
+  background: #f1f1ea;
 }
-  
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #314C59;
-    border-radius: 5px;
+  background: #314c59;
+  border-radius: 5px;
 }
-  
+
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #314C59;
+  background: #314c59;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .no-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 @tailwind components;
 @tailwind utilities;
 
 .home-gradient {
-    background: linear-gradient(156deg, #749A81 0%, #547F77 8.65%, #416367 16.98%, #354851 25.31%, #292F36 33.65%, #252930 43.54%, #212329 51.88%, #1D1E23 63.33%, #242830 73.23%, #29323D 82.60%, #2D3D4B 89.38%, #2F4858 98.22%, #2D3D4B 98.23%, #2D3D4B 100%);
+  background: linear-gradient(
+    156deg,
+    #749a81 0%,
+    #547f77 8.65%,
+    #416367 16.98%,
+    #354851 25.31%,
+    #292f36 33.65%,
+    #252930 43.54%,
+    #212329 51.88%,
+    #1d1e23 63.33%,
+    #242830 73.23%,
+    #29323d 82.6%,
+    #2d3d4b 89.38%,
+    #2f4858 98.22%,
+    #2d3d4b 98.23%,
+    #2d3d4b 100%
+  );
+}
+
+
+.background {
+  background-image: 
+    radial-gradient(at 44% 0%,rgba(255, 184, 122, 0.4) 0px, transparent 50%),
+    radial-gradient(at 80% 0%, rgba(31, 221, 255, 0.1) 0px, transparent 50%),
+    radial-gradient(at 80% 50%, rgba(255, 133, 173, 0.1) 0px, transparent 50%),
+    radial-gradient(at 0% 100%, rgba(255, 181, 138, 0) 0px, transparent 50%),
+    radial-gradient(at 80% 100%, rgba(107, 102, 255, 0) 0px, transparent 50%),
+    radial-gradient(at 0% 0%, rgba(255, 133, 167, 0.25) 0px, transparent 50%);
+}
+
+/*
+.background {
+  background-image: 
+    radial-gradient(at 44% 0%,rgba(170, 192, 178, 0.4) 0px, transparent 50%),
+    radial-gradient(at 80% 0%, rgba(110, 154, 175, 0.1) 0px, transparent 50%),
+    radial-gradient(at 80% 50%, rgba(226, 233, 229, 0.1) 0px, transparent 50%),
+    radial-gradient(at 0% 100%, rgba(200, 214, 205, 0.2) 0px, transparent 50%),
+    radial-gradient(at 80% 100%, rgba(206, 220, 228, 0.6) 0px, transparent 50%),
+    radial-gradient(at 0% 0%, rgba(76, 117, 138, 0.8) 0px, transparent 50%);
+}
+*/
+
+.animation-delay-2000 {
+  animation-delay: 2s;
+}
+
+.animation-delay-4000 {
+  animation-delay: 4s;
 }
